fix vertical spacing of header content on mobile

--- a/src/ui/components/HeaderContent/stylesheet.css
+++ b/src/ui/components/HeaderContent/stylesheet.css
@@ -93,6 +93,7 @@
 @media (max-width: 887px) {
   .sidebar {
     margin-bottom: 0;
+    margin-top: 5rem;
   }
 
   :scope[attachment='blue-ribbon'] .sidebar {
